2008-11-17  Pierre-Olivier Latour  <pol@apple.com>

        Reviewed by Maciej.

        Pixel tests should use a default tolerance of 0.1% on Leopard and 1.0%
        on Tiger.

        https://bugs.webkit.org/show_bug.cgi?id=22271

        * Scripts/run-webkit-tests:

2008-11-17  Pierre-Olivier Latour  <pol@apple.com>

        Reviewed by Sam Weinig.

        Added new JavaScript API on LayoutController to pause a running
        CSS transition or animation at a given time.

        https://bugs.webkit.org/show_bug.cgi?id=21261

        * DumpRenderTree/LayoutTestController.cpp:
        (pauseAnimationAtTimeOnElementWithIdCallback):
        (pauseTransitionAtTimeOnElementWithIdCallback):
        (LayoutTestController::staticFunctions):
        * DumpRenderTree/LayoutTestController.h:
        * DumpRenderTree/mac/LayoutTestControllerMac.mm:
        (LayoutTestController::pauseAnimationAtTimeOnElementWithId):
        (LayoutTestController::pauseTransitionAtTimeOnElementWithId):
        * DumpRenderTree/win/LayoutTestControllerWin.cpp:
        (LayoutTestController::pauseAnimationAtTimeOnElementWithId):
        (LayoutTestController::pauseTransitionAtTimeOnElementWithId):

2008-11-17  Gabor Loki  <loki@inf.u-szeged.hu>

        Reviewed by Darin Adler.

        <https://bugs.webkit.org/show_bug.cgi?id=22309>
        Pass the remaining options to build system on Qt-port

        * Scripts/build-webkit:
        * Scripts/webkitdirs.pm:

2008-11-16  Greg Bolsinga  <bolsinga@apple.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=21810
        Remove use of static C++ objects that are destroyed at exit time (destructors)

        Remove .o files from the exclude list that have had their exit-time destructors removed.
        Handle case when there is no current symbol.
        
        * Scripts/check-for-exit-time-destructors:

2008-11-16  Sam Weinig  <sam@webkit.org>

        * Scripts/do-webcore-rename: Remove now fixed renames.
